# vc_manager_bot

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
src/: allCommands.cpp  allCommands.h  def.h  main.cpp
src/commands/: createvc.cpp  createvc.h  hoge.cpp  hoge.h  ping.cpp  ping.h  registercategory.cpp  registercategory.h
